--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,28 @@
 {
-    "name": "nicklasw/instagram-api",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Nicklas Wallgren",
-            "email": "nicklas.wallgren@gmail.com"
-        }
-    ],
-    "require": {
-        "guzzlehttp/guzzle": "^6.2",
-        "psr/http-message": "^1.0",
-        "netresearch/jsonmapper": "^1.1",
-        "runz0rd/mapper-php": "^2.2",
-        "php": ">=7.1"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~4.0||~5.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "NicklasW\\Instagram\\": "src/"
-        }
+  "name": "nicklasw/instagram-api",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Nicklas Wallgren",
+      "email": "nicklas.wallgren@gmail.com"
     }
+  ],
+  "require": {
+    "guzzlehttp/guzzle": "^6.2",
+    "psr/http-message": "^1.0",
+    "netresearch/jsonmapper": "^1.1",
+    "runz0rd/mapper-php": "^2.2",
+    "php": ">=7.1"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~4.0||~5.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "NicklasW\\Instagram\\": "src/"
+    },
+    "files": [
+      "src/Support/functions.php"
+    ]
+  }
 }
