--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<phpunit colors="true" bootstrap="vendor/autoload.php">
+<phpunit
+        colors="true"
+        backupGlobals="false"
+        backupStaticAttributes="false"
+        convertErrorsToExceptions="true"
+        convertNoticesToExceptions="true"
+        convertWarningsToExceptions="true"
+        processIsolation="false"
+        stopOnFailure="false"
+        syntaxCheck="false"
+        bootstrap="vendor/autoload.php">
     <testsuites>
         <testsuite name="Test suite">
             <directory>./tests</directory>
@@ -8,6 +18,11 @@
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">src</directory>
+            <exclude>
+                <directory>./build</directory>
+                <directory>./tests</directory>
+                <directory>./vendor</directory>
+            </exclude>
         </whitelist>
     </filter>
 </phpunit>
