--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
 sudo: false
 
 cache:
-  directory:
+  directories:
     - $HOME/.composer/cache
 
 install:
@@ -18,6 +18,7 @@ before_script:
 
 script:
   - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+  - vendor/bin/phpcs --standard=ruleset.xml ./src
 
 after_script:
   - php coveralls.phar -v
