--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "psr/http-message": "^1.0",
     "netresearch/jsonmapper": "^1.1",
     "runz0rd/mapper-php": "^2.2",
-    "php": ">=7.1"
+    "php": ">=7.1",
+    "ext-curl": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0||~5.0",
@@ -23,7 +24,8 @@
       "Instagram\\SDK\\": "src/"
     },
     "files": [
-      "src/Support/functions.php"
+      "src/Support/functions.php",
+      "src/Support/Promises/functions.php"
     ]
   }
 }
