--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "ext-curl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.0||~5.0",
+    "phpunit/phpunit": "~6.0",
     "squizlabs/php_codesniffer": "^3.0"
   },
   "autoload": {
