--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: php
 php:
   - 7.1
 
+dist: xenial
+sudo: required
+
 cache:
   directories:
     - $HOME/.composer/cache
@@ -12,7 +15,10 @@ install:
   - wget https://github.com/satooshi/php-coveralls/releases/download/v1.0.0/coveralls.phar
 
 before_script:
+  - sudo apt-get update -y
+  - sudo apt-get install -y libzip4
   - mkdir -p build/logs
+  - .travis/setup.sh
 
 script:
   - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
