--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
       "email": "nicklas.wallgren@gmail.com"
     }
   ],
+  "description": "Instagram private API SDK",
   "require": {
     "guzzlehttp/guzzle": "^6.2",
     "psr/http-message": "^1.0",
