--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,10 @@
   "require": {
     "guzzlehttp/guzzle": "^6.2",
     "psr/http-message": "^1.0",
-    "netresearch/jsonmapper": "^1.1",
-    "runz0rd/mapper-php": "^2.2",
     "php": ">=7.2",
     "ext-curl": "*",
-    "webmozart/assert": "^1.3"
+    "webmozart/assert": "^1.3",
+    "tebru/gson-php": "^0.7"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.0",
