--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
   "require-dev": {
     "phpunit/phpunit": "~6.0",
     "squizlabs/php_codesniffer": "^3.0",
-    "phan/phan": "^1.0"
+    "phan/phan": "^3.0",
+    "drenso/phan-extensions": "^3.2"
   },
   "autoload": {
     "psr-4": {
