--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   ],
   "description": "Instagram private API SDK",
   "require": {
-    "guzzlehttp/guzzle": "^6.2",
+    "guzzlehttp/guzzle": "^6.0|^7.0",
     "psr/http-message": "^1.0",
     "php": ">=7.2",
     "webmozart/assert": "^1.0",
