--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
   ],
   "description": "Instagram private API SDK",
   "require": {
-    "guzzlehttp/guzzle": "^6.0|^7.0",
-    "psr/http-message": "^1.0",
+    "guzzlehttp/guzzle": "^6.0|^7.0|^7.2",
+    "psr/http-message": "^1.0|^2.0",
     "php": ">=7.2",
     "webmozart/assert": "^1.0",
     "tebru/gson-php": "^0.7",
